# bellatrix

./: .gitignore  .gitmodules  CLAUDE.md  diagrom.s  run.sh  temp.md
AI_context/: readme.md  sprint_01.md  sprint_02.md  sprint_03.md  sprint_04.md  sprint_05.md  sprint_06.md  sprint_07.md  sprint_08.md  sprint_09.md  sprint_10.md  sprint_11.md  sprint_14.md  sprint_15.md  sprint_16.md  sprint_17.md
AI_context/memory/: project_refactoring_sprint11.md
docs/: bellatrix_architecture_and_wiring.md  bellatrix_arquitetura.docx  bellatrix_emulation_source_structure_suggestion.md  getting_started.md  memory_architecture.md  roadmap.md  timing_and_architeture.md
patches/: 0001-add-bellatrix-variant-cmake.patch  0002-add-bellatrix-bus-hook.patch  0003-bellatrix-ipl-delivery.patch
scripts/: build-emu68-with-docker  build.sh  flash.sh  make_sdcard_image.sh  setup.sh
src/bus/gayle/: atapi_cd.c  atapi_cd.h  gayle.c  gayle.h  gayle_ide.c  gayle_ide.h
src/chipset/agnus/: agnus.c  agnus.h  beam.c  beam.h  bitplanes.c  bitplanes.h  blitter.c  blitter.h  copper.c  copper.h  copper_old.c  dma.c  dma.h
src/chipset/agnus/copper/: copper.c  copper.h  copper_regs.c  copper_regs.h  copper_service.c  copper_service.h  readme.md
src/chipset/cia/: cia.c  cia.h  cia_a.c  cia_b.c  cia_tod.c
src/chipset/denise/: denise.c  denise.h
src/chipset/floppy/: floppy_drive.c  floppy_drive.h
src/chipset/paula/: paula.c  paula.h  paula_disk.c  paula_disk.h  uart.c  uart.h
src/chipset/rtc/: rtc.c  rtc.h
src/core/: btrace.c  machine.c  machine.h
src/core/memory/: Readme.md  autoconfig.c  autoconfig.h  chip_ram.c  chip_ram.h  fast_ram.c  fast_ram.h  memory.c  memory.h  memory_map.c  memory_map.h  overlay.c  overlay.h
src/cpu/: bellatrix.c  bellatrix.h  cpu_backend.h  cpu_iface.c  cpu_iface.h
src/debug/: btrace.c  btrace.h  cpu_pc.h  debug.c  debug.h  emu_debug.c  emu_debug.h  os_debug.c  os_debug.h  probe.c  probe.h
src/host/: pal.h
src/host/posix/: pal_posix.c  support.h
src/host/raspi3/: pal_core.c  pal_debug.c  pal_ipl.c  pal_timer.c  posix_time.c  time.c  time.h
src/input/: keyboard.c  keyboard.h
src/memory/: memory.c  memory.h
src/storage/iso/: iso_image.c  iso_image.h
src/variants/bellatrix/: bellatrix.c  bellatrix.h
src/variants/bellatrix/chipset/: btrace.c  btrace.h  cia.c  cia.h
src/variants/bellatrix/platform/: pal.h
src/variants/bellatrix/platform/raspi3/: pal_core.c  pal_debug.c  pal_ipl.c
tests/: qemu-headless.sh
tests/integration/: harness_boot_adf.sh  harness_no_autoconfig.sh  harness_smoke.sh  test_machine_overlay.c
tests/traces/: boot_ks13.jsonl
tests/unit/: test_memory_map.c  test_uart_null_modem.c
tools/btrace/: analyze.py  btrace.py
tools/harness/: CMakeLists.txt  main.c  musashi_backend.c  musashi_backend.h
tools/launcher/: go.mod  main.go  roms.go  scan.go  styles.go  tui.go
